--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: "3.3"
 
 services:
   mysqldb:
@@ -15,7 +15,9 @@ services:
   app:
     depends_on:
       - mysqldb
-    build: ./spring-app
+    build:
+      context: "./"
+      dockerfile: "Dockerfile"
     restart: on-failure
     env_file: ./.env
     ports:
