--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 
-#http://localhost:8089/SpringMVC/servlet/sayHello?myName=Walid
+#http://localhost:8089/SpringMVC/...
 
 #Server configuration
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
 server.servlet.context-path=/SpringMVC
 server.port=8089
 ### DATABASE ###
-spring.datasource.url=jdbc:mysql://localhost:3306/tpachato?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://192.168.33.10:3306/achatdb?createDatabaseIfNotExist=true&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
-#spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 
