--- a/pom.xml
+++ b/pom.xml
@@ -115,7 +115,7 @@
 	</build>
 <distributionManagement>
     <repository>
-      <id>deploymentRepo</id>
+      <id>maven-releases</id>
       <name>admin</name>
      <url>http://192.168.8.101:8081/repository/maven-releases/</url>
     </repository>
